--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,8 +8,7 @@
     tools:context="ua.antonsava.firstapp.MainActivity"
     tools:showIn="@layout/main">
 
-    <include layout="@layout/toolbar"/>
-
+    <include layout="@layout/toolbar" />
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -19,7 +18,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
@@ -41,17 +40,15 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/sport"
                 android:layout_marginBottom="13dp"
-                android:background="@drawable/status"
+                android:background="@drawable/status_background"
                 android:clickable="true"
                 android:text="@string/status"
                 android:textColor="#ffffff"
                 android:textSize="15sp" />
 
-
             <View
                 style="@style/Line"
                 android:layout_above="@+id/group" />
-
 
             <TextView
                 android:id="@+id/group"
@@ -122,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/winner"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="17dp"
                 android:clickable="true"
                 android:text="@string/description"
                 android:textColor="#000000"
@@ -131,12 +128,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/description"
-                >
+                android:layout_below="@+id/description">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
             </LinearLayout>
