--- a/app/src/main/res/layout/recycler_image.xml
+++ b/app/src/main/res/layout/recycler_image.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:paddingBottom="10dp"
-    android:paddingLeft="5dp"
     android:paddingRight="5dp"
-    android:paddingTop="10dp">
+    android:paddingTop="15dp"
+    android:layout_weight="1">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="180dp"
+        android:layout_height="200dp" />
 
 </LinearLayout>
