--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#00BCD4</color>
-    <color name="primary_dark">#0097A7</color>
-    <color name="primary_light">#B2EBF2</color>
-    <color name="accent">#607D8B</color>
+    <color name="primary">#4a708b</color>
+    <color name="primary_dark">#36648b</color>
+    <color name="primary_light">#bbdefb</color>
+    <color name="accent">#4a708b</color>
     <color name="primary_text">#ffffff</color>
     <color name="secondary_text">#727272</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#ebe3e3</color>
+    <color name="icons">#ffffff</color>
+    <color name="divider">#e6e6fa</color>
+    <color name="line">#b6b6b6</color>
+    <color name="status_background">#ff8c00</color>
 </resources>
