--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="AppTheme.Base">
-        <!-- Customize your theme here. -->
-       <!-- <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        -->
-    </style>
+    <style name="AppTheme" parent="AppTheme.Base"></style>
 
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:colorPrimary">@color/primary</item>
@@ -18,20 +12,9 @@
         <item name="android:statusBarColor">@color/primary_dark</item>
     </style>
 
-    <!--
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
--->
     <style name="RightBack">
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -40,16 +23,17 @@
 
     <style name="LeftBack">
         <item name="android:textColor">#696969</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">7dp</item>
+        <item name="android:layout_marginBottom">13dp</item>
+        <item name="android:layout_marginTop">13dp</item>
         <item name="android:clickable">true</item>
     </style>
 
     <style name="Line">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">3dp</item>
-        <item name="android:background">@drawable/line</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/line</item>
     </style>
 </resources>
