--- a/app/src/main/res/layout/recycler_image.xml
+++ b/app/src/main/res/layout/recycler_image.xml
@@ -2,10 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingBottom="10dp"
     android:paddingRight="5dp"
-    android:paddingTop="15dp"
-    android:layout_weight="1">
+    android:paddingTop="15dp">
 
     <ImageView
         android:id="@+id/image"
