--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/my_toolbar"
+    android:id="@+id/app_toolbar"
     android:minHeight="?attr/actionBarSize"
     android:background="@color/primary"
     android:layout_alignParentTop="true" >
