--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
     </style>
 
     <style name="RightBack">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@color/right_back_color_text</item>
         <item name="android:textSize">@dimen/text_size</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_width">wrap_content</item>
@@ -22,7 +22,7 @@
     </style>
 
     <style name="LeftBack">
-        <item name="android:textColor">#696969</item>
+        <item name="android:textColor">@color/left_back_color_text</item>
         <item name="android:textSize">@dimen/text_size</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
